@@ -234,7 +234,8 @@ namespace libtorrent
 				, std::string const& logpath
 #endif
 				);
-			~session_impl();
+			virtual ~session_impl();
+
 			void init();
 			void start_session();
 
