@@ -33,6 +33,7 @@ POSSIBILITY OF SUCH DAMAGE.
 #include "libtorrent/peer_class_set.hpp"
 #include "libtorrent/peer_class.hpp"
 #include <vector>
+#include <algorithm> // for_find
 
 namespace libtorrent
 {
